# RaytracingPractice

./: .gitignore  CMakeLists.txt  build.sh  bvh.cpp  bvh.h  distribution.cpp  distribution.h  image_writer.cpp  image_writer.h  main.cpp  mix_distribution.cpp  mix_distribution.h  parse.cpp  parser.cpp  parser.h  ray.cpp  ray.h  run.sh  scene.cpp  scene.h  structures.cpp  structures.h
